# nsi-auth

./: Dockerfile  README.md  name2oid.py  nsi_auth.py  pyproject.toml  rfc4514_cmp.py
.github/workflows/: build-push-container.yml  test.yml
chart/: Chart.yaml  values.yaml
doc/: oid2py.py
more-tests/: conftest.py
more-tests-cert/: conftest.py
more-tests-cert/functional/: test_application.py
more-tests-info/: HOWTO.txt  __init__.py  conftest.py
more-tests-info/functional/: test_application.py
more-tests/functional/: test_application.py
tests/: conftest.py
tests/functional/: conftest.py  test_application.py  test_nginx.py  test_pem.py  test_traefik_cert.py  test_traefik_info.py  test_xfcc.py
tests/unit/: test_dn_extraction.py  test_load_allowed_client_dn.py  test_rfc4514_cmp.py
