[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nsi_auth"
version = "0.0.3.dev1"
license = "Apache-2.0"
authors = [
    {name = "Hans Trompert", email = "hans.trompert@surf.net"},
]
classifiers = [
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development",
    "Typing :: Typed",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Telecommunications Industry",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP",
]
dependencies = [
    "flask",
    "gunicorn",
    "pydantic-settings",
    "watchdog",
]

readme = "README.md"
requires-python = ">=3.11,<3.14"

[tool.setuptools.packages.find]
where = ["."]
include = ["nsi_auth.py"]
namespaces = false

[dependency-groups]
dev = [
    "pytest",
    "pytest-cov",
    "mypy",
    "flake8",
    "black",
    "ruff",
    "bumpversion",
    "isort",
    "flake8-pyproject",
]

[tool.black]
line-length = 120
target-version = ["py313", "py310"]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | venv
    | src
  )/
)
'''

[tool.flake8]
max-line-length = 120

[tool.ruff]
lint.exclude = [
    ".git",
    ".cache",
    ".eggs",
    "__pycache__",
    "venv",
    ".venv",
    "src",
]
lint.ignore = [
    "D100",
    "D104",
    "T201",
]
lint.select = [
    "ANN",
    "ARG",
    "B",
    "C",
    "D",
    "E",
    "F",
    "I",
    "N",
    "PGH",
    "PTH",
    "RET",
    "RUF",
    "S",
    "T",
    "W",
    "Q",
]
line-length = 120
target-version = "py313"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party=[]

[tool.ruff.lint.mccabe]
# Explicitly set default to 7, so we can later lower this threshold once all 6+ issues are solved.
max-complexity = 7
